--- a/style.css
+++ b/style.css
@@ -759,6 +759,7 @@ max-height: 60px; */
     position: fixed;
     bottom: 100px;
     right: auto;
+    animation: popEffect 1.5s infinite ease-in-out;
 }
 
 .sw-resize {
@@ -797,7 +798,8 @@ max-height: 60px; */
     transition-duration: 0.8s;
 }
 
-.contactDiv23:hover {
+.contactDiv23:hover,
+.contactDiv1:hover {
     text-decoration: none;
     font-size: 12.3px;
     color: #ff5200;
