--- a/style.css
+++ b/style.css
@@ -547,17 +547,16 @@ max-height: 60px; */
     vertical-align: middle !important;
     text-align: center !important;
     border-radius: 5px !important;
-    display: table !important;
+    display: flex;
     box-shadow: 1px solid #ff5200;
     overflow: hidden !important;
     transition: all 0.4s ease 0s !important;
     color: white;
-    margin-top: 15px;
     margin-bottom: 15px;
 }
 
 .actualLogo {
-    padding: 30px 35px;
+    padding: 15px 35px;
 }
 
 @media (max-width: 767px) {
