--- a/style.css
+++ b/style.css
@@ -553,6 +553,27 @@ max-height: 60px; */
     transition: all 0.4s ease 0s !important;
     color: white;
     margin-bottom: 15px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.tech-icons .icon-name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 0.5em;
+    font-weight: bold;
+    opacity: 0;
+    transition: opacity 0.4s ease 0s;
+    color: white;
+}
+
+.tech-icons:hover {
+    transform: scale(1.05) !important;
+    border: 2.2px solid #ff5200 !important;
+    color: #fff;
 }
 
 .actualLogo {
