--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 
 .VN {
     font-family: "Raleway", serif !important;
-    color: #ff5200;
+    color: #33FFFF;
     padding-left: 20px;
     font-size: 50px;
     padding-right: 20px;
