--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ h2 {
     /* border-radius: 15px; */
     padding: 1.25rem 1.75rem;
     border: 1px solid #ff5200;
-    color: #ff5200;
+    color: #33FFFF;
     font-size: 15px;
     transition-duration: 1s;
     line-height: 1;
