--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 
 .VN {
     font-family: "Raleway", serif !important;
-    color: #33FFFF;
+    color: #7DF9FF;
     padding-left: 20px;
     font-size: 50px;
     padding-right: 20px;
@@ -141,7 +141,7 @@ a.top:hover {
 }
 
 .color {
-    color: #33FFFF;
+    color: #7DF9FF;
     font-size: 15px;
 }
 
@@ -160,7 +160,7 @@ a.top:hover {
 #Stop:hover {
     /* font-size: 17.5px; */
     /* font-weight: bold; */
-    color: #33FFFF;
+    color: #7DF9FF;
 }
 
 #imagediv {
@@ -214,7 +214,7 @@ a.top:hover {
     font-family: "Raleway", serif !important;
     font-weight: 700;
     text-align: left;
-    color: #33FFFF;
+    color: #7DF9FF;
 }
 
 
@@ -297,8 +297,8 @@ h2 {
 
 .Tbutton {
     background-color: transparent;
-    border: 1px solid #33FFFF;
-    color: #33FFFF;
+    border: 1px solid #7DF9FF;
+    color: #7DF9FF;
     transition-duration: 1s;
     /* line-height: 1; */
     text-decoration: none;
@@ -316,8 +316,8 @@ h2 {
     background-color: transparent;
     /* border-radius: 15px; */
     padding: 1.25rem 1.75rem;
-    border: 1px solid #33FFFF;
-    color: #33FFFF;
+    border: 1px solid #7DF9FF;
+    color: #7DF9FF;
     font-size: 15px;
     transition-duration: 1s;
     line-height: 1;
@@ -330,7 +330,7 @@ h2 {
 
 .Abutton:hover {
     cursor: pointer;
-    background-color: #33FFFF;
+    background-color: #7DF9FF;
     color: #fff;
     /*   z-index: 10;
     /* font-weight: bold; */
@@ -364,7 +364,7 @@ h2 {
 .timeline-label h4 {
     margin-top: 0;
     font-size: 30px;
-    color: #33FFFF;
+    color: #7DF9FF;
     padding: 16px 0px;
     font-weight: 700;
 }
@@ -387,7 +387,7 @@ h2 {
 }
 
 .text-timeline {
-    background: #33FFFF;
+    background: #7DF9FF;
     color: #fff;
     font-size: 18px;
     height: 40px;
@@ -401,7 +401,7 @@ h2 {
     height: 40px;
     line-height: 30px;
     box-sizing: border-box;
-    border: 4px solid #33FFFF;
+    border: 4px solid #7DF9FF;
     border-left: none;
     -webkit-transition: 600ms -webkit-transform ease-in-out;
     transition: 600ms -webkit-transform ease-in-out;
@@ -411,7 +411,7 @@ h2 {
     transform: rotateY(90deg);
     -webkit-transform-origin: left;
     transform-origin: left;
-    color: #33FFFF;
+    color: #7DF9FF;
     background: #fff;
     text-align: center;
 }
@@ -500,7 +500,7 @@ max-height: 60px; */
 }
 
 .project-card-view {
-    box-shadow: 0 4px 5px 3px #33FFFF !important;
+    box-shadow: 0 4px 5px 3px #7DF9FF !important;
     color: white !important;
     background-color: transparent !important;
     opacity: 0.9 !important;
@@ -511,7 +511,7 @@ max-height: 60px; */
 .project-card-view:hover {
     transform: scale(1.02) !important;
     overflow: hidden !important;
-    box-shadow: 0 4px 4px 5px #33FFFF !important;
+    box-shadow: 0 4px 4px 5px #7DF9FF !important;
 }
 
 @media(max-width: 1000px) {
@@ -543,12 +543,12 @@ max-height: 60px; */
 .tech-icons {
     font-size: 4.5em !important;
     opacity: 0.93 !important;
-    border: 1.7px solid #33FFFF !important;
+    border: 1.7px solid #7DF9FF !important;
     vertical-align: middle !important;
     text-align: center !important;
     border-radius: 5px !important;
     display: flex;
-    box-shadow: 1px solid #33FFFF;
+    box-shadow: 1px solid #7DF9FF;
     overflow: hidden !important;
     transition: all 0.4s ease 0s !important;
     color: white;
@@ -572,7 +572,7 @@ max-height: 60px; */
 
 .tech-icons:hover {
     transform: scale(1.05) !important;
-    border: 2.2px solid #33FFFF !important;
+    border: 2.2px solid #7DF9FF !important;
     color: #fff;
 }
 
@@ -589,7 +589,7 @@ max-height: 60px; */
 .tech-icons:hover {
     transform: scale(1.05) !important;
     overflow: hidden !important;
-    border: 2.2px solid #33FFFF !important;
+    border: 2.2px solid #7DF9FF !important;
     color: #fff;
 }
 
@@ -613,10 +613,10 @@ max-height: 60px; */
     font-family: "Raleway", serif !important;
 }
 
-.resume .resume-item .#33FFFF {
+.resume .resume-item .#7DF9FF {
     line-height: 18px;
     font-size: 0.9em;
-    background: #33FFFF;
+    background: #7DF9FF;
     padding: 8px 15px;
     display: inline-block;
     font-weight: 600;
@@ -627,7 +627,7 @@ max-height: 60px; */
 .resume .resume-item {
     padding: 0 0 10px 25px;
     margin-top: -2px;
-    border-left: 2px solid #33FFFF;
+    border-left: 2px solid #7DF9FF;
     position: relative;
     font-family: "Raleway", serif !important;
 }
@@ -635,7 +635,7 @@ max-height: 60px; */
 .resume .resume-item .resume-title {
     line-height: 18px;
     font-size: 0.9em;
-    background: #33FFFF;
+    background: #7DF9FF;
     padding: 8px 15px;
     display: inline-block;
     font-weight: 600;
@@ -668,7 +668,7 @@ max-height: 60px; */
     left: -9px;
     top: 0;
     background: #fff;
-    border: 2px solid #33FFFF;
+    border: 2px solid #7DF9FF;
 }
 
 .resume {
@@ -740,7 +740,7 @@ max-height: 60px; */
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    /* background: #33FFFF; */
+    /* background: #7DF9FF; */
     transition: 0.5s;
     transform: scale(0.9);
     z-index: -1;
@@ -748,13 +748,13 @@ max-height: 60px; */
 
 .home-social-icons:hover::before {
     transform: scale(1.1);
-    box-shadow: 0 0 15px #33FFFF;
+    box-shadow: 0 0 15px #7DF9FF;
 }
 
 .home-social-icons:hover {
-    color: #33FFFF;
-    box-shadow: 0 0 5px #33FFFF;
-    text-shadow: 0 0 2px #33FFFF;
+    color: #7DF9FF;
+    box-shadow: 0 0 5px #7DF9FF;
+    text-shadow: 0 0 2px #7DF9FF;
 }
 
 .social-icons {
@@ -764,7 +764,7 @@ max-height: 60px; */
 }
 
 .icon-colour {
-    color: #33FFFF !important;
+    color: #7DF9FF !important;
 }
 
 .faab {
@@ -822,7 +822,7 @@ max-height: 60px; */
 .contactDiv1:hover {
     text-decoration: none;
     font-size: 12.3px;
-    color: #33FFFF;
+    color: #7DF9FF;
     animation: none;
 }
 
@@ -877,7 +877,7 @@ max-height: 60px; */
 }
 
 .contactIcon:hover {
-    color: #33FFFF;
+    color: #7DF9FF;
 }
 
 #rotate {
