--- a/style.css
+++ b/style.css
@@ -475,7 +475,7 @@ h2 {
 .Abutton:hover {
     cursor: pointer;
     background-color: #7DF9FF;
-    color: #fff;
+    color: #020c1b;
     /*   z-index: 10;
     /* font-weight: bold; */
 }
