--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ html {
 .logo-text {
     font-family: 'Arial', sans-serif;
     font-size: 28px;
-    color: #fff;
+    color: #7DF9FF;
     text-align: center;
     line-height: 1;
     letter-spacing: -3px;
@@ -90,7 +90,7 @@ html {
 
 .diagonal-line {
     position: absolute;
-    border: 2px solid #fff;
+    border: 2px solid #7DF9FF;
     transform-origin: 50% 50%;
 }
 
