--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ html {
     position: absolute;
     width: 95%;
     height: 95%;
-    border: 2px solid #fff;
+    border: 2px solid #7DF9FF;
     transform: rotate(45deg);
 }
 
