--- a/style.css
+++ b/style.css
@@ -733,7 +733,7 @@ max-height: 60px; */
     font-family: "Raleway", serif !important;
 }
 
-.resume .resume-item {
+.resume .resume-item .#5eead4 {
     line-height: 18px;
     font-size: 0.9em;
     background: #5eead4;
