--- a/style.css
+++ b/style.css
@@ -144,17 +144,13 @@ html {
 }
 
 @media (max-width: 480px) {
-    .logo-container {
-        width: 100px;
-        height: 100px;
+    .logo-container-main {
+        width: 50px;
+        height: 50px;
     }
 
     .logo-text {
-        font-size: 30px;
-    }
-
-    .diagonal-line {
-        width: 50%;
+        font-size: 24px;
     }
 }
 
