--- a/style.css
+++ b/style.css
@@ -1023,14 +1023,14 @@ ul {
     color: rgba(240, 248, 255, 0.623);
 }
 
-.container {
+/* .container {
     display: flex;
     flex-direction: column;
     position: relative;
     width: 100px;
     align-items: center;
     width: 20%;
-}
+} */
 
 .vertical-line {
     width: 1px;
