--- a/style.css
+++ b/style.css
@@ -1033,6 +1033,12 @@ ul {
 .briefcase-icon {
     position: absolute;
     top: 0;
+    border-radius: 100px;
+    z-index: 2;
+    background: #5eead4;
+    padding: 7px;
+    color: #020c1b;
+    font-size: 12px;
 }
 
 .experience-container {
