--- a/style.css
+++ b/style.css
@@ -1048,8 +1048,10 @@ ul {
     margin: 0 auto;
 }
 
-.breifcase-icon {
+.breifcase-icon-container {
     display: flex;
+    margin-top: 10px;
+    position: relative;
     justify-content: center;
 }
 
