--- a/style.css
+++ b/style.css
@@ -1089,9 +1089,16 @@ ul {
     flex-grow: 1;
 }
 
+.company-link {
+    font-size: 18px;
+    margin-left: 8px;
+}
+
 .company-name {
+    display: flex;
     font-size: 24px;
     color: #ffffff;
+    align-items: center;
     font-weight: 600;
     margin-bottom: 4px;
     margin-top: 17px;
