--- a/style.css
+++ b/style.css
@@ -904,8 +904,7 @@ h2 {
 }
 
 .contactDiv23:hover,
-.contactDiv1:hover,
-.company-icon-link:hover {
+.contactDiv1:hover {
     text-decoration: none;
     font-size: 12.3px;
     color: #5eead4;
@@ -1097,6 +1096,12 @@ ul {
 
 .company-icon-link {
     color: #fff
+}
+
+.company-icon-link:hover {
+    text-decoration: none;
+    color: #5eead4;
+    animation: none;
 }
 
 .company-name {
