--- a/style.css
+++ b/style.css
@@ -1198,6 +1198,10 @@ ul {
         font-size: 10px;
         padding: 2px 5px;
     }
+
+    .briefcase-icon {
+        font-size: 8px;
+    }
 }
 
 @media (min-width: 769px) {
